ingress-controller/app1/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    type: sharded
  name: hello-simon
  namespace: simon
  resourceVersion: "64815"
spec:
  host: first-app.apps.simon-public.melbourneopenshift.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello-simon-internal
    weight: 100
  wildcardPolicy: None
