ingress-controller/app1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-simon-internal
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-simon
